add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
       <title>Tyler Apps</title>
       <title>Witty title you added in step 2</title>
-    <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-      <div>
+      <!-- All content goes here -->
+      <div id="all-contents">
             <nav>
                   <h1> Paul Blart </h1>
                   <ul>
@@ -26,9 +27,14 @@
                   <!-- Sidebar section -->
                   <div>
 
+
                   </div>
-                  <h2></h2>
-                  <p></p>
+                  <div>
+                        <h2>Tyler's -_-</h2>
+                        <p></p>
+                  </div>
+                  <img src="https://img.playbuzz.com/image/upload/ar_1.8867924528301887,c_crop/v1562957051/stolqwas1x5mjexvqbcw.jpg"
+                        width=800px>
                   <div>
                         <h3>Interests</h3>
                         <ul>
@@ -37,11 +43,9 @@
                               <li>and cards </li>
                         </ul>
                   </div>
+
                   <div>
-                  <img scr="https://github.com/OperationSpark/first-website-hs-beta/blob/master/img/hallebot.png?raw=true">
-                  
-            </main>
-      </div>
+                  </div>
 </body>
 
 </html>
