--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-      <title>Tyler Apps</title>
-      <title>Witty title you added in step 2</title>
+      <title>Witty title </title>
       <link rel="stylesheet" href="style.css">
 </head>
 
