add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <div id="all-contents">
             <nav>
                   <h1> Paul Blart </h1>
-                  <ul>
-                        <li>
+                  <ul id="nav-ul">
+                        <li class="nav-li">
                               <a href="index.html"> Home </a>
                         </li>
-                        <li>
+                        <li class="nav-li">
                               <a href="portfolio.html"> Portfolio </a>
                         </li>
                   </ul>
@@ -24,27 +24,29 @@
             <main>
 
                   <!-- Sidebar section -->
-                  <div>
+
+                  <div class="sidebar">
+                        <img class="sidebar-img"
+                              src="https://img.playbuzz.com/image/upload/ar_1.8867924528301887,c_crop/v1562957051/stolqwas1x5mjexvqbcw.jpg"
+                              width=800px>
 
 
                   </div>
-                  <div>
+
+                  <div class="content">
                         <h2>Tyler's -_-</h2>
-                        <p></p>
+                        <p> we are all </p>
+                        <div id="interests">
+                              <h3>Interests</h3>
+                              <ul>
+                                    <li>play apex </li>
+                                    <li>chest </li>
+                                    <li>and cards </li>
+                              </ul>
+                        </div>
                   </div>
-                  <img src="https://img.playbuzz.com/image/upload/ar_1.8867924528301887,c_crop/v1562957051/stolqwas1x5mjexvqbcw.jpg"
-                        width=800px>
-                  <div>
-                        <h3>Interests</h3>
-                        <ul>
-                              <li>play apex </li>
-                              <li>chest </li>
-                              <li>and cards </li>
-                        </ul>
-                  </div>
-
-                  <div>
-                  </div>
+            </main>
+      </div>
 </body>
 
 </html>
