--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -9,7 +9,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(62, 0, 128);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -67,7 +67,8 @@
 
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
-
+			var points = 0
+			var speed = 10
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -75,8 +76,14 @@
 			turn it around! 
 			*/
 			function update() {
-
-				positionX = positionX + 10;
+				if (positionX > boardWidth) {
+					speed = speed * -1;
+			
+				}
+				if (positionX < 0 ){
+					speed = speed * -1
+				}
+				positionX = positionX + speed;
 				moveBoxTo(positionX);
 
 
@@ -88,9 +95,17 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 10;
-
-
+				positionX = 0;
+				points = points + 1
+				changeBoxText(points);
+				//speed = speed +3;
+			if (speed > 0){
+				speed = speed +3;
+					
+			}
+			else if (speed < 0){
+				speed = speed -3;	
+			}
 			};
 		})();
 	</script>
