--- a/portfolio.html
+++ b/portfolio.html
@@ -1,39 +1,81 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Tyler'sAmazing Website</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-
-  <title> Tyler'sAmazing Website</title>
-  <link rel="stylesheet"href="style.css" >
-  
-</head>
-
-<body>
-
-  <div id="all-contents">
-    <nav>
-      <h1>Tyler's Glorious Website</h1>
-      <ul id="nav-ul">
-        <li class="nav-li">
-          <a class="nav-a" href="index.html">Home</a>
-        </li>
-        <li class="nav-li">
-          <a class="nav-a" href="portfolio.html">Portfolio</a>
-        </li>
-      </ul>
-
-    </nav>
-    <main>
-      <div class="content">
-        <h1>Portfolio</h1>
-        <ul id="portfolio">
-          <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
-          <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
-          <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+  <body>
+    <div id="all-contents">
+      <nav>
+        <h1>Tyler's Glorious Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a class="nav-a" href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a class="nav-a" href="portfolio.html">Portfolio</a>
+          </li>
         </ul>
-      </div>
-    </main>
-  </div>
-</body>
-
+      </nav>
+      <main>
+        <div class="content">
+          <h1>Portfolio</h1>
+          <ul id="portfolio">
+            <li>
+              <a href="projects/platformer/"
+                >Platformer : A cannon - dodging, collectible - grabbing
+                adventure game for Halleb0t</a
+              >
+            </li>
+            <li>
+              <a href="projects/bouncing-box/"
+                >Bouncing Box : A project that gives you a taste of game
+                development on the web
+              </a>
+            </li>
+            <li>
+              <a href="projects/circularity/"
+                >Circularity : A motion poem using random number generation and
+                velocity applied to circle shapes...</a
+              >
+            </li>
+          </ul>
+          <h2>Advanced Projects</h2>
+          <ul id="portfolio">
+            <li>
+              <a href="asd-projects/data-shapes">
+                Data Shapes: Iteration practice with patterns</a
+              >
+            </li>
+            <li>
+              <a href="asd-projects/debugging-exercise">
+                Debugging Exercise: A debugging exercise</a
+              >
+            </li>
+            <li>
+              <a href="asd-projects/snake"
+                >Snake: Feed the snake or be fed upon</a
+              >
+            </li>
+            <li>
+              <a href="asd-projects/walker"
+                >Walker: Practice user input by animating walking boxes</a
+              >
+            </li>
+            <li>
+              <a href="asd-projects/image-filtering"
+                >Image Filtering: Filter images using loops</a
+              >
+            </li>
+            <li>
+              <a href="asd-projects/sorting-exercise"
+                >Sorting Exercise: An exercise on sorting algorithms</a
+              >
+            </li>
+          </ul>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
