finshed todo 8 of snake

--- a/asd-projects/snake/index.html
+++ b/asd-projects/snake/index.html
@@ -4,7 +4,8 @@
   <head>
     <title>Snake</title>
     <!--Link jQuery and CSS here-->
-    
+    <script src="jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     
@@ -14,5 +15,5 @@
   </body>
   
   <!-- Link index.js here -->
-  
+  <script src="index.js"></script>
 </html>
